2009-12-09  Stephen Shaw <sshaw@decriptor.com>

	* configure.ac: Changed version to 0.9.1 

2009-11-12  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* COPYING: 
	* ndesk-dbus: 
	* configure.ac: Bundle internalized and patched version of ndesk-dbus.

2009-09-16  Mike Gorse  <mgorse@novell.com>

	* configure.ac: Check for glib-sharp and gtk-sharp for tests.

2009-07-29  Stephen Shaw  <sshaw@decriptor.com>

	* Makefile.am: Checked for ENABLE_TESTS

2009-07-01  Mike Gorse  <mgorse@novell.com>

	* Makefile.include: Update to support PACKAGE_FLAG.
	* mkinstalldirs: Added.
	* configure.ac, Makefile.am, data/at-spi-sharp.pc.in.in,
	data/Makefile.am: Added .pc file.