@@ -1,3 +1,7 @@
+2010-02-03  Matt Guo  <matt@mattguo.com>
+
+        * ndesk-dbus/Mapper.cs: Fix dbus thread safety issues
+
 2009-12-09  Stephen Shaw <sshaw@decriptor.com>
 
 	* configure.ac: Changed version to 0.9.1 
